--- a/Game3/style.css
+++ b/Game3/style.css
@@ -56,3 +56,14 @@ h2 {
 #time-left {
     color: #1e90ff;
 }
+
+#pause,#restart{
+    margin-top: 20px;
+    width: 90px;
+    height: 50px;
+    font-size: 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: rgb(254, 204, 6);
+    margin-right: 30px;
+}
